--- a/src/components/SideBar/SideBar.module.css
+++ b/src/components/SideBar/SideBar.module.css
@@ -3,7 +3,7 @@
 }
 
 .container{
-    @apply overflow-y-auto py-4 px-3 bg-gray-50 rounded dark:bg-gray-800 h-[100%]
+    @apply flex flex-col items-center justify-between overflow-y-auto py-4 px-3 bg-gray-50 rounded dark:bg-gray-800 h-[100%]
 }
 
 .list{
@@ -11,11 +11,11 @@
 }
 
 .link{
-    @apply flex items-center justify-center p-2 text-base font-normal text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700
+    @apply flex w-[40px] h-[40px] rounded-[100%] bg-white items-center justify-center text-base font-normal text-gray-900 dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700
 }
 
 .svg{
-    @apply flex items-center justify-center text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white
+    @apply p-[2px] text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white
 }
 
 .span{
