--- a/src/sass/components/Sidebar.module.scss
+++ b/src/sass/components/Sidebar.module.scss
@@ -1,27 +1,25 @@
-
 .aside {
-  @apply w-[100%] h-[100vh];
+  @apply w-[100%] h-[100vh] flex-[1] -md:hidden;
 }
 
 .container {
-  @apply flex flex-col items-center justify-between overflow-y-auto py-4 px-3 bg-gray-50 rounded dark:bg-gray-800 h-[100%];
+  @apply flex flex-col items-center justify-center overflow-y-auto py-4 px-3 bg-mainDarkColor h-[100%];
 }
 
 .list {
-  @apply space-y-2;
+  @apply h-[455px] gap-10 flex flex-col;
 }
-
 
 .link {
   @apply flex w-[40px] h-[40px] rounded-[100%] hover:bg-orangeColor bg-grayColor items-center justify-center text-base font-normal text-gray-900;
 }
 
-.Activelink{
-  @apply flex w-[40px] h-[40px] rounded-[100%] bg-orangeColor items-center justify-center text-base font-normal text-gray-900
+.Activelink {
+  @apply flex w-[40px] h-[40px] rounded-[100%] bg-orangeColor items-center justify-center text-base font-normal text-gray-900;
 }
 
-.Activelink svg{
-  @apply fill-white
+.Activelink svg {
+  @apply fill-white;
 }
 
 .span {
