--- a/src/sass/components/Sidebar.module.scss
+++ b/src/sass/components/Sidebar.module.scss
@@ -3,7 +3,7 @@
 }
 
 .container {
-  @apply flex flex-col items-center justify-center overflow-y-auto py-4 px-3 bg-mainDarkColor h-[100%];
+  @apply flex flex-col items-center justify-center overflow-y-auto py-4 px-3 bg-mainGray h-[100%];
 }
 
 .list {
