--- a/src/sass/components/NavBar.module.scss
+++ b/src/sass/components/NavBar.module.scss
@@ -1,5 +1,5 @@
 .header{
-    @apply w-[100%] h-[60px] hidden -md:flex bg-mainGray items-center justify-between;
+    @apply w-[100%] h-[60px] hidden -lg:flex bg-mainGray items-center justify-between;
 }
 
 .svg{
